--- a/src/locale/fi.json
+++ b/src/locale/fi.json
@@ -11,25 +11,25 @@
         "Message": "Viesti",
         "Report": "Raportti",
         "Workday Report": "Työpäiväraportti",
-        "Schedule": "Ajoittaa",
+        "Schedule": "Työvuorolista",
         "Todo List": "Tehtävälista",
         "Employee Management": "Työntekijöiden Hallinta",
         "Do not leave any empty fields.": "Älä jätä tyhjiä kenttiä.",
         "Send messages": "Lähetä viestejä",
         "Send the message so that every employees can see when they check their schedule. Also, you can check the box below to send the message to all the managers instead.": "Lähetä viesti, jotta jokainen työntekijä näkee, kun he tarkistavat aikataulunsa. Voit myös valita alla olevan valintaruudun lähettääksesi viestin kaikille esimiehille.",
-        "Close": "Lopettaa",
-        "Send": "Lähettää",
+        "Close": "Sulje",
+        "Send": "Lähetä",
         "Send to managers?": "Lähetetäänkö esimiehille?",
         "Name (i.e. Tiina)": "Nimi (esimerkiksi, Tiina)",
         "Send to... (i.e. Tiina)": "Lähetä... (esimerkiksi, Tiina)",
-        "Message (i.e. Please clean the store tomorrow)": "Viesti (esimerkiksi, Ole hyvä ja puhdista lattia)",
+        "Message (i.e. Can you clean the store tomorrow)": "Viesti (esimerkiksi, Voitko puhdistaa myymälän huomenna.)",
         "Message Board": "Viestitaulu",
         "See employee's login and logout time.": "Katso työntekijän sisään- ja uloskirjautumisaika.",
         "Calculate employees' number of workdays.": "Laske työntekijöiden työpäivien lukumäärä.",
-        "Employee's work schedule": "Työntekijän työaikataulu",
-        "Add more people to the shop, or change their group, etc.": "Lisää ihmisiä kauppaan tai vaihda heidän ryhmäänsä.",
+        "Employee's work schedule": "Työntekijän työvuorolista",
+        "Add more people to the shop, or change their group, etc.": "Lisää ihmisiä myymäläään tai vaihda heidän ryhmäänsä.",
         "List of messages received from other workers": "Luettelo muilta työntekijöiltä saaduista viesteistä",
-        "Send a message to employees or to Todo List": "Lähetä viesti työntekijöille tai Todo Listille"
+        "Send a message to employees or to Todo List": "Lähetä viesti työntekijöille tai tehtävälistalle"
     },
     "todo": {
         "TODO LIST": "TEHTÄVÄLISTA",
@@ -37,79 +37,79 @@
         "Sender": "Lähettäjä",
         "Recipient": "Vastaanottaja",
         "Message": "Viesti",
-        "Complete?": "Täydellinen?",
-        "Delete": "Poistaa",
+        "Complete?": "Valmis?",
+        "Delete": "Poista",
         "Nothing in here.": "Ei täällä mitään."
     },
     "report-workday": {
         "Status day": "Lisää tila päivälle {{dateStr}}.",
         "Current": "Työntekijä: {{name}}. Päivämäärä: {{dateStr}}. Tila: <5>{{status}}</5>.",
         "Enter this employee's new status in the field below. If this day is still considered as work day although they do not show up, check the box below.": "Syötä tämän työntekijän uusi tila alla olevaan kenttään. Jos tämä päivä katsotaan edelleen työpäiväksi, vaikka he eivät näy, valitse alla oleva ruutu.",
-        "This person still receive workday.": "Hänen henkilönsä saa edelleen työpäivän.",
-        "Cancel": "Peruuttaa",
+        "This person will still receive a workday.": "Tämä henkilönsä saa edelleen työpäivän.",
+        "Cancel": "Peruuta",
         "Submit": "Lähetä",
-        "Present": "Nykyinen",
+        "Present": "Paikalla",
         "Absent": "Poissa",
         "Loading Database": "Ladataan tietokantaa",
-        "Group's total workday:": "Ryhmän koko työpäivä:",
-        "From": "Alkean",
+        "Group's total workdays:": "Ryhmän kaikki työpäivät:",
+        "From": "Alkaen",
         "To": "Loppu",
         "WORKDAY REPORT": "TYÖPÄIVÄRAPORTTI",
         "Total": "Summa",
         "Please choose a group.": "Valitse ryhmä.",
-        "No employee in this group.": "Ei työntekijää tässä ryhmässä.",
-        "Total Report": "{{totalDay}} työpäivä, tai {{totalHour}} työtunti."
+        "No employee in this group.": "Ei työntekijöitä tässä ryhmässä.",
+        "Total Report": "{{totalDay}} työpäivät, tai {{totalHour}} työtunnit."
     },
     "schedule": {
-        "SCHEDULE": "AJOITTAA",
-        "Upload Schedule CSV file": "Lataa aikataulun CSV-tiedosto",
-        "Export as Excel File": "Vie Excel-tiedostona",
+        "SCHEDULE": "TYÖVUOROLISTA",
+        "Upload Schedule as CSV file": "Lähetä työvuorolista CSV-tiedostona",
+        "Export as Excel File": "Lataa Excel-tiedostona",
         "Loading Database": "Ladataan tietokantaa",
-        "There is no employee in this group to get the schedule from.": "Tässä ryhmässä ei ole työntekijää, jolta aikataulut voisivat saada.",
+        "There is no employee in this group to get the schedule from.": "Tässä ryhmässä ei ole työntekijää, jolta työvuorot voisivat saada.",
         "Please put the file in the box": "Laita tiedosto laatikkoon",
         "File size is too large.": "Tiedoston koko on liian suuri.",
         "This is not a .csv file.": "Tämä ei ole .csv-tiedosto.",
         "Error! Only receive 4 column: Date, Name, Login, Logout.": "Virhe! Vastaanota vain 4 saraketta: päivämäärä, nimi, kirjautuminen, uloskirjautuminen.",
-        "File uploaded. You may close this upload pop-up now.": "Tiedosto ladattu. Voit sulkea tämän latausponnahdusikkunan nyt.",
-        "Upload Schedule into SPR-Kirppis.": "Lataa aikataulu SPR-Kirppikseen.",
-        "Put the CSV file containing schedule of all employees into the box below. The file muse only have four criteria: Date, Name, Scheduled Login and Scheduled Logout.": "Laita kaikkien työntekijöiden aikataulut sisältävä CSV-tiedosto alla olevaan laatikkoon. Tiedostomuusalla on vain neljä kriteeriä: päivämäärä, nimi, ajoitettu sisäänkirjautuminen ja ajoitettu uloskirjautuminen.",
-        "Uploading the same schedule will overwrite the old ones in the database.": "Saman aikataulun lataaminen korvaa tietokannan vanhat.",
-        "Upload": "Lataa",
-        "Close": "Lopettaa",
-        "Cannot get the ID of the employee. Please check your input.": "Työntekijän henkilötodistusta ei voi saada. Tarkista syöttämäsi tiedot.",
+        "File uploaded. You may close this upload pop-up now.": "Tiedosto lähetetty. Voit sulkea tämän ikkunan nyt.",
+        "Upload Schedule into SPR-Kirppis.": "Lähetä työvuorot SPR-Kirppikseen.",
+        "Put the CSV file containing schedule of all employees into the box below. The file must only have four criteria: Date, Name, Start of workshift alku and End of workshift.": "Laita kaikkien työntekijöiden työvuorot sisältävä CSV-tiedosto alla olevaan laatikkoon. Tiedosto saa sisältää vain neljä kriteeriä: päivämäärä, nimi, työvuoron alku ja työvuoron loppu.",
+        "Uploading the same schedule will overwrite the old ones in the database.": "Saman työvuorolistan lataaminen korvaa tietokannan vanhat.",
+        "Upload": "Lähetä",
+        "Close": "Sulje",
+        "Cannot get the ID of the employee. Please check your input.": "Työntekijän numeroa ei voitu saada. Tarkista syöttämäsi tiedot.",
         "Something wrong with the date. Please check your input.": "Päivämäärässä jotain vikaa. Tarkista syöttämäsi tiedot.",
-        "Cannot get the login Stamp. Please check your input.": "Kirjautumisleimaa ei voi saada. Tarkista syöttämäsi tiedot.",
-        "Cannot get the logout Stamp. Please check your input.": "Kirjautumisleimaa ei voi saada. Tarkista syöttämäsi tiedot."
+        "Cannot get the login Stamp. Please check your input.": "Kirjautumisleimaa ei voitu saada. Tarkista syöttämäsi tiedot.",
+        "Cannot get the logout Stamp. Please check your input.": "Kirjautumisleimaa ei voitu saada. Tarkista syöttämäsi tiedot."
     },
     "employee-list": {
         "Store": "Kirppis",
-        "Refresh": "Virkistää",
-        "Logout": "Ulos Kaikki",
-        "Present": "Nykyinen",
+        "Refresh": "Virkistä",
+        "Logout": "Kirjaa Ulos",
+        "Present": "Paikalla",
         "Absent": "Poissa"
     },
     "report": {
         "REPORT": "RAPORTOINTI",
-        "From": "Alkean",
+        "From": "Alkaen",
         "To": "Loppu",
-        "Export the report to Excel file": "Vie raportti Excel-tiedostoon",
-        "Download a preview of this report as CSV file": "Lataa tämän raportin esikatselu CSV-tiedostona",
-        "Export as CSV": "Vie CSV-muodossa",
-        "Export as Excel File": "Vie Excel-tiedostona",
+        "Export the report to Excel file": "Lataa raportti Excel-tiedostoon",
+        "Download a preview of this report as CSV file": "Lataa esikatselu tästä raportista CSV-tiedostona",
+        "Export as CSV": "Lataa CSV-muodossa",
+        "Export as Excel File": "Lataa Excel-tiedostona",
         "Loading Database...": "Ladataan tietokantaa...",
         "Wrong format. Please double-check the time.": "Väärä formaatti. Tarkista aika uudelleen.",
-        "Add records for": "Lisää tietueita kohteelle",
-        "Input timestamp. You can leave one field blank if you just want to add only one log timestamp.": "Syötä aikaleima. Voit jättää yhden kentän tyhjäksi, jos haluat lisätä vain yhden lokin aikaleiman.",
+        "Add records for": "Lisää leimauksia kohteelle",
+        "Input timestamp. You can leave one field blank if you just want to add only one log timestamp.": "Syötä leimaus. Voit jättää yhden kentän tyhjäksi, jos haluat lisätä vain yhden lokin leiman.",
         "Login:": "Sisään:",
         "Logout:": "Ulos:",
         "Time Format: HHMMSS": "Aikamuoto: HHMMSS",
         "Submit": "Lähetä",
-        "Cancel": "Peruuttaa",
-        "Delete Title": "Poista kaikki tietueet päivästä {{date}}",
-        "Delete Warning": "VAROITUS: Työntekijän {{name}} tiedot päivältä {{date}} poistetaan. Haluatko todella jatkaa?",
-        "Delete": "Poistaa",
-        "Datebox Title": "Napsauta lisätäksesi ylimääräinen tietue päivälle {{date}}",
-        "Datedelete Title": "Napsauta poistaaksesi kaikki tietueet päivältä {{date}}",
+        "Cancel": "Peruuta",
+        "Delete Title": "Poista kaikki leimaukset päivästä {{date}}",
+        "Delete Warning": "VAROITUS: Työntekijän {{name}} tiedot päivältä {{date}} poistetaan. Haluatko jatkaa?",
+        "Delete": "Poista",
+        "Datebox Title": "Napsauta lisätäksesi ylimääräinen leimaus päivälle {{date}}",
+        "Datedelete Title": "Napsauta poistaaksesi kaikki leimaukset päivältä {{date}}",
         "Total": "Summa",
         "Calculate total working hours of this employee": "Laske tämän työntekijän kokonaistyötunnit",
         "hours.": "tuntia.",
@@ -119,7 +119,7 @@
     },
     "employee": {
         "EMPLOYEE MANAGEMENT": "HENKILÖSTÖJOHTO",
-        "Close": "Lopetta",
+        "Close": "Sulje",
         "Add Group": "Lisää Ryhmä",
         "Add Employees": "Lisää Työntekijöitä",
         "Loading database...": "Ladataan tietokantaa...",
@@ -129,7 +129,7 @@
         "Status": "Tila",
         "In / Out": "Sisään / Ulos",
         "Overtime?": "Ylityo?",
-        "This group has no employee.": "Tällä ryhmällä ei ole työntekijää.",
+        "This group has no employee.": "Tällä ryhmällä ei ole työntekijöitä.",
         "Loading Status": "Latauksen tila...",
         "Dupplicate name": "Tunnus ei ole käytettävissä. Työntekijällä {{name}} ryhmässä {{group}} oli jo tämä tunnus.",
         "Edit Title": "Tee muutoksia kohteeseen {{name}}",
@@ -141,25 +141,25 @@
         "Tag id": "Tag id",
         "Group": "Ryhmä",
         "Split name into First and last name?": "Jaa nimi etu- ja sukunimeksi?",
-        "Delete": "Poistaa",
+        "Delete": "Poista",
         "Submit": "Lähetä",
         "All fields must be filled.": "Kaikki kentät on täytettävä.",
-        "Add group to the list": "Lisää ryhmä luetteloon",
+        "Add group to the list": "Lisää ryhmä listaan",
         "Error Not Empty": "Ryhmä {{groupname}} ei ole tyhjä.",
         "Manage Title": "Hallinnoi ryhmää {{group}}",
         "Otherwise you can change the group's name by typing the new one and press Change Name.": "Muussa tapauksessa voit muuttaa ryhmän nimeä kirjoittamalla uuden ja painamalla Vaihda nimi.",
-        "Change Name": "Vaihtaa nimeä",
+        "Change Name": "Vaihda nimi",
         "Group name": "Ryhmän nimi",
-        "Group Delete Warning": "Jos haluat poistaa tämän ryhmän, varmista, että kaikki tämän ryhmän työntekijät poistetaan. Paina Poista vain, kun olet poistanut kaikki ryhmästä <1>{{group}}</1>.",
+        "Group Delete Warning": "Jos haluat poistaa tämän ryhmän, varmista, että kaikki tämän ryhmän työntekijät on poistettu tai siirretty. Paina Poista vain, kun olet poistanut/siirtänyt kaikki ryhmästä <1>{{group}}</1>.",
         "Nothing to change.":  "Ei mitään muutettavaa."
     },
     "header": {
         "LOGOUT": "ULOS",
         "MANAGEMENT": "HALLINTA",
-        "EMPLOYEES": "HENKILÖSTÖJOHTO",
+        "EMPLOYEES": "HENKILÖSTÖ",
         "REPORT": "RAPORTOINTI",
         "WORKDAY": "TYÖPÄIVÄRAPORTTI",
-        "SCHEDULE": "AJOITTAA",
+        "SCHEDULE": "TYÖVUOROT",
         "TODO": "TEHTÄVÄLISTA"
     }
 
