--- a/src/locale/fi.json
+++ b/src/locale/fi.json
@@ -22,7 +22,7 @@
         "Send to managers?": "Lähetetäänkö esimiehille?",
         "Name (i.e. Tiina)": "Nimi (esimerkiksi, Tiina)",
         "Send to... (i.e. Tiina)": "Lähetä... (esimerkiksi, Tiina)",
-        "Message (i.e. Can you clean the store tomorrow)": "Viesti (esimerkiksi, Voitko puhdistaa myymälän huomenna.)",
+        "Message (i.e. Please clean the store tomorrow)": "Viesti (esimerkiksi, Voitko siivota myymälän huomenna.)",
         "Message Board": "Viestitaulu",
         "See employee's login and logout time.": "Katso työntekijän sisään- ja uloskirjautumisaika.",
         "Calculate employees' number of workdays.": "Laske työntekijöiden työpäivien lukumäärä.",
@@ -39,34 +39,35 @@
         "Message": "Viesti",
         "Complete?": "Valmis?",
         "Delete": "Poista",
-        "Nothing in here.": "Ei täällä mitään."
+        "Nothing in here.": "Ei tehtäviä."
     },
     "report-workday": {
         "Status day": "Lisää tila päivälle {{dateStr}}.",
         "Current": "Työntekijä: {{name}}. Päivämäärä: {{dateStr}}. Tila: <5>{{status}}</5>.",
-        "Enter this employee's new status in the field below. If this day is still considered as work day although they do not show up, check the box below.": "Syötä tämän työntekijän uusi tila alla olevaan kenttään. Jos tämä päivä katsotaan edelleen työpäiväksi, vaikka he eivät näy, valitse alla oleva ruutu.",
-        "This person will still receive a workday.": "Tämä henkilönsä saa edelleen työpäivän.",
+        "Enter this employee's new status in the field below. If this day is still considered as work day although they do not show up, check the box below.": "Syötä tämän työntekijän uusi tila alla olevaan kenttään. Jos päivä poissaolosta huolimatta katsotaan työpäiväksi, valitse alla oleva ruutu.",
+        "This person will still receive a workday.": "Päivä merkitään henkilölle työpäiväksi.",
         "Cancel": "Peruuta",
         "Submit": "Lähetä",
         "Present": "Paikalla",
         "Absent": "Poissa",
-        "Loading Database": "Ladataan tietokantaa",
-        "Group's total workdays:": "Ryhmän kaikki työpäivät:",
-        "From": "Alkaen",
+        "Loading Database": "Ladataan tietokantaa...",
+        "Group's total workday": "Ryhmän kaikki työpäivät:",
+        "From": "Alku",
         "To": "Loppu",
         "WORKDAY REPORT": "TYÖPÄIVÄRAPORTTI",
+        "Please enter end date": "Anna lopetuspäivä",
         "Total": "Summa",
         "Please choose a group.": "Valitse ryhmä.",
         "No employee in this group.": "Ei työntekijöitä tässä ryhmässä.",
-        "Total Report": "{{totalDay}} työpäivät, tai {{totalHour}} työtunnit."
+        "Total Report": "{{totalDay}} työpäivät."
     },
     "schedule": {
         "SCHEDULE": "TYÖVUOROLISTA",
         "Upload Schedule as CSV file": "Lähetä työvuorolista CSV-tiedostona",
         "Export as Excel File": "Lataa Excel-tiedostona",
         "Loading Database": "Ladataan tietokantaa",
-        "There is no employee in this group to get the schedule from.": "Tässä ryhmässä ei ole työntekijää, jolta työvuorot voisivat saada.",
-        "Please put the file in the box": "Laita tiedosto laatikkoon",
+        "There is no employee in this group to get the schedule from.": "Tässä ryhmässä ei ole työntekijöitä..",
+        "Please put the file in the box": "Laita aikataulutiedosto laatikkoon",
         "File size is too large.": "Tiedoston koko on liian suuri.",
         "This is not a .csv file.": "Tämä ei ole .csv-tiedosto.",
         "Error! Only receive 4 column: Date, Name, Login, Logout.": "Virhe! Vastaanota vain 4 saraketta: päivämäärä, nimi, kirjautuminen, uloskirjautuminen.",
@@ -76,6 +77,7 @@
         "Uploading the same schedule will overwrite the old ones in the database.": "Saman työvuorolistan lataaminen korvaa tietokannan vanhat.",
         "Upload": "Lähetä",
         "Close": "Sulje",
+        "Please enter end date": "Anna lopetuspäivä",
         "Cannot get the ID of the employee. Please check your input.": "Työntekijän numeroa ei voitu saada. Tarkista syöttämäsi tiedot.",
         "Something wrong with the date. Please check your input.": "Päivämäärässä jotain vikaa. Tarkista syöttämäsi tiedot.",
         "Cannot get the login Stamp. Please check your input.": "Kirjautumisleimaa ei voitu saada. Tarkista syöttämäsi tiedot.",
@@ -83,14 +85,14 @@
     },
     "employee-list": {
         "Store": "Kirppis",
-        "Refresh": "Virkistä",
-        "Logout": "Kirjaa Ulos",
+        "Refresh": "Päivitä",
+        "Logout": "Kaikki Ulos",
         "Present": "Paikalla",
         "Absent": "Poissa"
     },
     "report": {
         "REPORT": "RAPORTOINTI",
-        "From": "Alkaen",
+        "From": "Alku",
         "To": "Loppu",
         "Export the report to Excel file": "Lataa raportti Excel-tiedostoon",
         "Download a preview of this report as CSV file": "Lataa esikatselu tästä raportista CSV-tiedostona",
@@ -99,13 +101,13 @@
         "Loading Database...": "Ladataan tietokantaa...",
         "Wrong format. Please double-check the time.": "Väärä formaatti. Tarkista aika uudelleen.",
         "Add records for": "Lisää leimauksia kohteelle",
-        "Input timestamp. You can leave one field blank if you just want to add only one log timestamp.": "Syötä leimaus. Voit jättää yhden kentän tyhjäksi, jos haluat lisätä vain yhden lokin leiman.",
+        "Input timestamp. You can leave one field blank if you just want to add only one log timestamp.": "Syötä leimaus. Voit jättää yhden kentän tyhjäksi, jos haluat lisätä vain yhden lokin leimauksen.",
         "Login:": "Sisään:",
         "Logout:": "Ulos:",
         "Time Format: HHMMSS": "Aikamuoto: HHMMSS",
         "Submit": "Lähetä",
         "Cancel": "Peruuta",
-        "Delete Title": "Poista kaikki leimaukset päivästä {{date}}",
+        "Delete Title": "Poista kaikki leimaukset päivältä {{date}}",
         "Delete Warning": "VAROITUS: Työntekijän {{name}} tiedot päivältä {{date}} poistetaan. Haluatko jatkaa?",
         "Delete": "Poista",
         "Datebox Title": "Napsauta lisätäksesi ylimääräinen leimaus päivälle {{date}}",
@@ -113,9 +115,13 @@
         "Total": "Summa",
         "Calculate total working hours of this employee": "Laske tämän työntekijän kokonaistyötunnit",
         "hours.": "tuntia.",
+        "hours": "tuntia",
         "0 hour.": "0 tuntia.",
         "minutes": "minuuttia",
-        "Change format": "Vaihda muotoa"
+        "Change format": "Vaihda muotoa",
+        "Loading database...": "Ladataan tietokantaa...",
+        "Please enter end date": "Anna lopetuspäivä",
+        "Change Total's format": "Muuta Summan muotoa"
     },
     "employee": {
         "EMPLOYEE MANAGEMENT": "HENKILÖSTÖJOHTO",
@@ -129,9 +135,9 @@
         "Status": "Tila",
         "In / Out": "Sisään / Ulos",
         "Overtime?": "Ylityo?",
-        "This group has no employee.": "Tällä ryhmällä ei ole työntekijöitä.",
+        "This group has no employee.": "Tässä ryhmässä ei ole työntekijöitä.",
         "Loading Status": "Latauksen tila...",
-        "Dupplicate name": "Tunnus ei ole käytettävissä. Työntekijällä {{name}} ryhmässä {{group}} oli jo tämä tunnus.",
+        "Dupplicate name": "Tunnus ei ole käytettävissä. Työntekijällä {{name}} ryhmässä {{group}} on jo tämä tunnus.",
         "Edit Title": "Tee muutoksia kohteeseen {{name}}",
         "Leave the field blank if you do not want to change. You can also press Delete to permanently delete this employee.": "Jätä kenttä tyhjäksi, jos et halua muuttaa. Voit myös poistaa tämän työntekijän pysyvästi painamalla Poista.",
         "Old": "Vanha",
@@ -151,7 +157,10 @@
         "Change Name": "Vaihda nimi",
         "Group name": "Ryhmän nimi",
         "Group Delete Warning": "Jos haluat poistaa tämän ryhmän, varmista, että kaikki tämän ryhmän työntekijät on poistettu tai siirretty. Paina Poista vain, kun olet poistanut/siirtänyt kaikki ryhmästä <1>{{group}}</1>.",
-        "Nothing to change.":  "Ei mitään muutettavaa."
+        "Nothing to change.":  "Ei mitään muutettavaa.",
+        "Add employee to group": "Lisää työntekijä ryhmään",
+        "Velho's full name must be the same": "Velhon koko nimen on oltava sama",
+        "Ideal Format GGYYXXXX": "Ihanteellinen muoto: RRVVXXXX"
     },
     "header": {
         "LOGOUT": "ULOS",
