--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -50,15 +50,16 @@
         "Submit": "Submit",
         "Present": "Present",
         "Absent": "Absent",
-        "Loading Database": "Loading Database",
-        "Group's total workday:": "Group's total workday:",
+        "Loading Database": "Loading Database...",
+        "Group's total workday": "Group's total workday:",
         "From": "From",
         "To": "To",
         "WORKDAY REPORT": "WORKDAY REPORT",
+        "Please enter end date": "Please enter end date",
         "Total": "Total",
         "Please choose a group.": "Please choose a group.",
         "No employee in this group.": "No employee in this group.",
-        "Total Report": "{{totalDay}} workday, or {{totalHour}} workhour."
+        "Total Report": "{{totalDay}} workday."
     },
     "schedule": {
         "SCHEDULE": "SCHEDULE",
@@ -76,6 +77,7 @@
         "Uploading the same schedule will overwrite the old ones in the database.": "Uploading the same schedule will overwrite the old ones in the database.",
         "Upload": "Upload",
         "Close": "Close",
+        "Please enter end date": "Please enter end date",
         "Cannot get the ID of the employee. Please check your input.": "Cannot get the ID of the employee. Please check your input.",
         "Something wrong with the date. Please check your input.": "Something wrong with the date. Please check your input.",
         "Cannot get the login Stamp. Please check your input.": "Cannot get the login Stamp. Please check your input.",
@@ -113,9 +115,13 @@
         "Total": "Total",
         "Calculate total working hours of this employee": "Calculate total working hours of this employee",
         "hours.": "hours.",
+        "hours": "hours",
         "0 hour.": "0 hour.",
         "minutes": "minutes",
-        "Change format": "Change format"
+        "Change format": "Change format",
+        "Loading database...": "Loading database...",
+        "Please enter end date": "Please enter end date",
+        "Change Total's format": "Change Total's format"
     },
     "employee": {
         "EMPLOYEE MANAGEMENT": "EMPLOYEE MANAGEMENT",
@@ -152,7 +158,6 @@
         "Group name": "Group name",
         "Group Delete Warning": "If you want to delete this group, make sure that every employees in this group are deleted. Press Delete only when you have deleted everyone in group <1>{{group}}</1>.",
         "Nothing to change.":  "Nothing to change.",
-
         "Add employee to group": "Add employee to group",
         "Velho's full name must be the same": "Velho's full name must be the same",
         "Ideal Format GGYYXXXX": "Ideal Format: GGYYXXXX"
